2013-09-26  Patryk Kaczmarek

	* Signal children add/remove added for box widget

2013-09-26  Patryk Kaczmarek

        * Function description fixes

2013-09-30

        * Issues deteced by Static Code Analysis fixed

2013-10-01

	* Signal visible-data-changed support implemented for clock and datetime widgets